# GroupOperation

./: CMakeLists.txt  README.md
include/: SE3.h
src/: CMakeLists.txt  SE3.cpp  main.cpp
